# rbot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
config/: config.example.toml  persona.md
scripts/: install.ps1  install.sh  rbot.ps1  rbot.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
skills/: example.toml
src/: config.rs  init.rs  llm.rs  main.rs  memory.rs  scheduler.rs  skills.rs  telegram.rs
src/tools/: http.rs  mod.rs  pdf.rs  search.rs  shell.rs  tmux.rs
