[package]
name = "rbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
cron = "0.12"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
teloxide = { version = "0.12", default-features = false, features = ["macros", "auto-send", "rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "fs", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
pdf-extract = "0.7"
